--- a/index.html
+++ b/index.html
@@ -14,25 +14,21 @@ body {
   font-family: Arial, sans-serif;
   color: white;
 }
-
 .app {
   max-width: 420px;
   margin: auto;
   padding: 20px;
 }
-
 .card {
   background: #020617;
   border-radius: 18px;
   padding: 20px;
-  box-shadow: 0 0 30px rgba(0, 255, 200, 0.2);
+  box-shadow: 0 0 30px rgba(0, 255, 200, 0.25);
 }
-
 h1 {
   text-align: center;
   margin-bottom: 20px;
 }
-
 input, select, button {
   width: 100%;
   padding: 12px;
@@ -41,52 +37,28 @@ input, select, button {
   border: none;
   font-size: 16px;
 }
-
 select, input {
   background: #020617;
   color: white;
   border: 1px solid #00ffc8;
 }
-
 button {
   background: linear-gradient(90deg, #00ffc8, #0077ff);
   color: black;
   font-weight: bold;
   cursor: pointer;
 }
-
 button:hover {
   opacity: 0.85;
 }
-
 #output {
   margin-top: 15px;
-  padding: 15px;
+  padding: 14px;
   background: #020617;
-  border-radius: 10px;
-  border: 1px solid #00ffc8;
-  text-align: center;
-  min-height: 60px;
-}
-
-.history {
-  margin-top: 20px;
-  background: #020617;
-  padding: 10px;
-  border-radius: 10px;
-}
-
-.history h3 {
-  margin-top: 0;
+  border-radius: 12px;
+  border: 2px solid #00ffc8;
   text-align: center;
 }
-
-.history-item {
-  border-bottom: 1px solid #00ffc8;
-  padding: 5px;
-  font-size: 13px;
-}
-
 .upload-box {
   border: 2px dashed #00ffc8;
   padding: 15px;
@@ -94,12 +66,26 @@ button:hover {
   text-align: center;
   margin-top: 15px;
 }
-
 #chart {
   margin-top: 20px;
   height: 300px;
-  border-radius: 10px;
+  border-radius: 12px;
   overflow: hidden;
+}
+.history {
+  margin-top: 20px;
+  background: #020617;
+  padding: 10px;
+  border-radius: 10px;
+}
+.history h3 {
+  margin-top: 0;
+  text-align: center;
+}
+.history-item {
+  border-bottom: 1px solid #00ffc8;
+  padding: 5px;
+  font-size: 13px;
 }
 </style>
 </head>
@@ -116,7 +102,7 @@ button:hover {
       <option value="OTC">OTC</option>
     </select>
 
-    <input id="pair" placeholder="BTC/USDT বা EUR/USD" />
+    <input id="pair" placeholder="BTCUSDT বা EURUSD" />
 
     <div class="upload-box">
       📸 Upload Chart Screenshot  
@@ -125,7 +111,11 @@ button:hover {
 
     <button onclick="runAnalysis()">🚀 Run AI Scan</button>
 
-    <div id="output">Waiting for signal...</div>
+    <div id="output">
+      📊 Signal: --  
+      <br><br>
+      📈 Trend: --
+    </div>
 
     <div id="chart"></div>
 
@@ -138,16 +128,19 @@ button:hover {
 </div>
 
 <script>
-const API = "https://sweetex-backend-fa1z.onrender.com/analyze";
+/* ===========================
+   FINAL WORKING BACKEND API
+   =========================== */
+const API = "https://sweetex-backend-falz.onrender.com/analyze";
 
 let historyList = [];
 
 function runAnalysis() {
-  const pair = document.getElementById("pair").value;
+  const pair = document.getElementById("pair").value.trim();
   const market = document.getElementById("market").value;
 
   if (!pair) {
-    alert("Enter a trading pair");
+    alert("Enter a trading pair (Example: BTCUSDT or EURUSD)");
     return;
   }
 
@@ -156,21 +149,29 @@ function runAnalysis() {
 
   fetch(API, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ pair, market })
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      pair: pair,
+      market: market
+    })
   })
-  .then(res => res.json())
+  .then(res => {
+    if (!res.ok) throw new Error("Server Error");
+    return res.json();
+  })
   .then(data => {
     const result = `
-      📊 Signal: <b style="font-size:22px;color:#00ffc8;">${data.signal}</b><br><br>
+      📊 Signal: <b style="font-size:22px;color:#00ffc8;">${data.signal}</b>
+      <br><br>
       📈 Trend: <b style="font-size:18px;color:#00bfff;">${data.trend}</b>
     `;
-
     document.getElementById("output").innerHTML = result;
     addHistory(pair, data.signal, data.trend);
   })
   .catch(() => {
-    document.getElementById("output").innerHTML = "❌ Backend Offline";
+    document.getElementById("output").innerHTML = "❌ Backend Offline or API Error";
   });
 }
 
@@ -189,7 +190,7 @@ function loadChart(pair) {
   new TradingView.widget({
     container_id: "chart",
     autosize: true,
-    symbol: "BINANCE:" + pair.replace("/", ""),
+    symbol: "BINANCE:" + pair.toUpperCase(),
     interval: "1",
     theme: "dark",
     style: "1",
